@@ -2,12 +2,14 @@
 #
 # See 'wizhelp config parameters' for more information. 
 #
-# -- Default filenames for the database. These are now define in
-#    mush.config but can also be set here for backward compatibility.
-#    If you uncomment them and changed GAMENAME in mush.config, 
-#    change these as well:
+# -- Default filenames and path for the database. These are now 
+#    define in mush.config but can also be set here for backward
+#    compatibility. If you uncomment them and changed GAMENAME 
+#    BIN, TEXT or DATA in mush.config, change these as well:
 #
-#database_home	data
+#binary_home	./bin
+#database_home	./data
+#text_home	./text
 #crash_database	netmush.db.CRASH
 #gdbm_database	netmush.gdbm
 #
