@@ -1603,6 +1603,7 @@ CONF conftable[] = {
 {(char *)"autozone",			cf_bool,	CA_GOD,		CA_PUBLIC,	&mudconf.autozone,		(long)"New objects are @chzoned to their creator's zone"},
 {(char *)"bad_name",			cf_badname,	CA_GOD,		CA_DISABLED,	NULL,				0},
 {(char *)"badsite_file",		cf_string,	CA_STATIC,	CA_GOD,		(int *)&mudconf.site_file,	MBUF_SIZE},
+{(char *)"binary_home",			cf_string,	CA_STATIC, 	CA_GOD,		(int *)&mudconf.binhome,	MBUF_SIZE},
 {(char *)"booleans_oldstyle",		cf_bool,	CA_GOD,		CA_PUBLIC,	&mudconf.bools_oldstyle,	(long)"Dbrefs #0 and #-1 are boolean false, all other\n\t\t\t\tdbrefs are boolean true"},
 {(char *)"building_limit",		cf_int,		CA_GOD,		CA_PUBLIC,	(int *)&mudconf.building_limit,	0},
 {(char *)"c_is_command",		cf_bool,	CA_GOD,		CA_PUBLIC,	&mudconf.c_cmd_subst,		(long)"%c substitution is last command rather than ANSI"},
@@ -1627,8 +1628,6 @@ CONF conftable[] = {
 {(char *)"dark_actions",		cf_bool,	CA_GOD,		CA_WIZARD,	&mudconf.dark_actions,		(long)"Dark objects still trigger @a-actions when moving"},
 {(char *)"dark_sleepers",		cf_bool,	CA_GOD,		CA_WIZARD,	&mudconf.dark_sleepers,		(long)"Disconnected players not shown in room contents"},
 {(char *)"database_home",		cf_string,	CA_STATIC, 	CA_GOD,		(int *)&mudconf.dbhome,		MBUF_SIZE},
-{(char *)"text_home",			cf_string,	CA_STATIC, 	CA_GOD,		(int *)&mudconf.txthome,	MBUF_SIZE},
-{(char *)"binary_home",			cf_string,	CA_STATIC, 	CA_GOD,		(int *)&mudconf.binhome,	MBUF_SIZE},
 {(char *)"default_home",		cf_dbref,	CA_GOD,		CA_PUBLIC,	&mudconf.default_home,		NOTHING},
 {(char *)"dig_cost",			cf_int,		CA_GOD,		CA_PUBLIC,	&mudconf.digcost,		0},
 {(char *)"divert_log",			cf_divert_log,	CA_STATIC,	CA_DISABLED,	&mudconf.log_diversion,		(long) logoptions_nametab},
@@ -1810,6 +1809,7 @@ CONF conftable[] = {
 {(char *)"terse_shows_contents",	cf_bool,	CA_GOD,		CA_PUBLIC,	&mudconf.terse_contents,	(long)"TERSE suppresses the contents list of a location"},
 {(char *)"terse_shows_exits",		cf_bool,	CA_GOD,		CA_PUBLIC,	&mudconf.terse_exits,		(long)"TERSE suppresses the exit list of a location"},
 {(char *)"terse_shows_move_messages",	cf_bool,	CA_GOD,		CA_PUBLIC,	&mudconf.terse_movemsg,		(long)"TERSE suppresses movement messages"},
+{(char *)"text_home",			cf_string,	CA_STATIC, 	CA_GOD,		(int *)&mudconf.txthome,	MBUF_SIZE},
 {(char *)"thing_flags",			cf_set_flags,	CA_GOD,		CA_DISABLED,	(int *)&mudconf.thing_flags,	0},
 {(char *)"thing_parent",		cf_dbref,	CA_GOD,		CA_PUBLIC,	&mudconf.thing_parent,		NOTHING},
 {(char *)"thing_proto",			cf_dbref,	CA_GOD,		CA_PUBLIC,	&mudconf.thing_proto,		NOTHING},
